<resources>
    <string name="app_name">OneParkingApp</string>
    <string name="title_activity_map">Popayan</string>
    <string name="title_activity_my_cars">Mis Vehiculos</string>
    <string name="title_activity_add_car">Agregar Vehiculo</string>

    <string name="url_base">http://192.168.0.12:8080/api/</string>
    <string name="url_io">http://192.168.0.12:8080/</string>
    <string name="http_404">Recurso no encontrado</string>
    <string name="http_401">Accion no Autorizada</string>
    <string name="http_server">Error en Servidor</string>
    <string name="http_connection">Sin Conexion</string>
    <string name="http_timeout">El servidor no responde</string>

    <string name="alert_positive">Aceptar</string>
    <string name="alert_negative">Cancelar</string>

    <string name="report_form">Llena todos los campos para continuar</string>
    <string name="report_form_image">Agrega una imagen y la descripción para completar el reporte</string>

    <string name="loading">Cargando…</string>
    <string name="sending">Enviando…</string>
    <string name="oneparking">OneParking</string>
    <string name="splash_rights">Derechos reservados or EzLife Corporation SAS</string>

    <string name="login_email">Email</string>
    <string name="login_usr">Usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_in">Entrar</string>
    <string name="login_form">Escribe el email y contraseña</string>
    <string name="login_fail">Email o contraseña incorrecta</string>
    <string name="login_reg">Registrate</string>
    <string name="login_error">Usuario o password incorrecto</string>
    <string name="login_error_timeout">Error al iniciar sesión, verifica la hora de tu equipo</string>
    <string name="login_error_unknown">Error al iniciar sesión, intenta de nuevo</string>

    <string name="pass_new">Nueva contraseña</string>
    <string name="pass_new_2">Repetir contraseña</string>
    <string name="pass_ok">Aceptar</string>
    <string name="pass_info">Agrega una nueva contraseña para continuar</string>
    <string name="pass_error">La contraseña no coincide</string>
    <string name="pass_error_2">Error al actualizar password, intenta de nuevo</string>

    <string name="reg_info">Crea una cuenta en tan solo dos pasos</string>
    <string name="reg_name">Nombre</string>
    <string name="reg_identity">Identificación</string>
    <string name="reg_cel">Celular</string>
    <string name="reg_next">Siguiente</string>
    <string name="reg_dis">Uso parqueaderos para discapacitados</string>
    <string name="reg_back">Atras</string>
    <string name="reg_ok">Registrar</string>
    <string name="reg_email">Email</string>
    <string name="reg_pass">Contraseña</string>
    <string name="reg_pass2">Repetir Contraseña</string>
    <string name="reg_form">llena todos los campos</string>
    <string name="reg_pass_invalid">La contraseña no coincide</string>
    <string name="reg_success">Registro exitoso !</string>
    <string name="reg_exist">El correo o el celular ya se encuentra registrado</string>

    <string-array name="cities">
        <item>Popayan</item>
    </string-array>

    <string name="car_plate">Placa</string>
    <string name="car_nickname">Apodo</string>
    <string name="car_brand">Marca</string>
    <string name="car_wellcome">Bienvenido a OneParkingApp</string>
    <string name="car_wellcome_des">Agrega un Vehiculo y no te preocupes mas adelante puedes agregar mas</string>
    <string name="car_title">Agregar Carro</string>
    <string name="add">Agregar</string>
    <string name="car_insert">Agregado !</string>
    <string name="car_inserting">Insertando ...</string>
    <string name="car_insert_error">Error al agregar vehiculo, intenta de nuevo</string>
    <string name="car_insert_error_2">Limite de vehiculos alcanzado</string>
    <string name="action_refresh">Recargar</string>

    <string name="selected">Seleccionado</string>
    <string name="delete">Eliminar</string>
    <string name="dialog_car_title">@string/title_activity_my_cars</string>
    <string name="dialog_car_subtitle">Selecciona tu vehiculo actual</string>
    <string name="my_car_remove_alert">Debe tener al menos un vehiculo</string>
    <string name="my_car_remove_error">Error al eliminar vehiculo, intenta de nuevo</string>

    <string name="map_location_error">No se puede obtener tu localización</string>
    <string name="map_location_disabled">Sin reconocimiento de localización</string>
    <string name="money">Mi Dinero</string>
    <string name="my_Car">Mi vehiculo</string>
    <string name="reg_fail">Error al registrar, intenta de nuevo</string>
    <string name="my_car_remove">Vehiculo eliminado</string>
    <string name="my_cars_reload">Desliza hacia abajo para recargar los vehiculos</string>
    <string name="report_description">Descripción</string>
    <string name="report">Reportar</string>

    <string name="zone_btn_reserve">Reservar</string>
    <string name="zone_bays">Bahias Ocupadas</string>
    <string name="zone_dis">Discapacidad</string>
    <string name="zone_btn_disability">Especiales</string>
    <string name="zone_btn_report">Reportar</string>
    <string name="zone_info">Información de Horarios</string>
    <string name="zone_to_last">El resto del día</string>
    <string name="zone_to">Hasta las %s</string>
    <string name="bay_available">%1$d de %2$d</string>
    <string name="dialog_reserve_title">Tiempo Solicitado</string>
    <string name="dialog_reserve_money">Saldo</string>
    <string name="dialog_reserve_less">Disminuir Tiempo</string>
    <string name="dialog_reserve_add">Incrementar Tiempo</string>
    <string name="reserve_to">Tarificación hasta </string>

    <string name="timer_time">Tiempo</string>
    <string name="timer_value">Valor</string>
    <string name="timer_stop">Detener</string>

    <string name="reserve_busy">No hay cupos disponibles</string>
    <string name="setup_error">Error al cargar la configuración</string>
    <string name="setup_loading">Cargando Configuración</string>
    <string name="report_success">Reporte enviado exitosamente</string>
    <string name="report_fail">Error al enviar reporte, intenta de nuevo</string>
    <string name="report_fail_image">Error al cargar imagen, intenta de nuevo</string>
    <string-array name="zone_states">
        <item>Gratuito</item>
        <item>Tarificación</item>
        <item>Prohibido</item>
    </string-array>

    <string name="price_title_time">Tiempo (min)</string>
    <string name="price_title_value">Valor</string>
    <string name="schedule_info">No se realiza cobro en los espacios no especificados</string>
    <string name="schedule_day_0">Lunes a Viernes</string>
    <string name="schedule_day_1">Sabado</string>
    <string name="schedule_day_2">Domingo</string>
    <string name="action_info">Información</string>

    <string-array name="info_titles">
        <item>Horarios</item>
        <item>Precios</item>
    </string-array>

    <string name="pass_form">Llena todos los campos</string>
    <string name="pass_success">Actualización exitosa</string>

</resources>

