<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import
            alias="V"
            type="android.view.View" />

        <variable
            name="secondScreen"
            type="java.lang.Boolean" />

        <variable
            name="loader"
            type="ezlife.movil.oneparkingapp.util.Loader" />
    </data>

    <LinearLayout
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium"
                android:gravity="center"
                android:text="@string/reg_info" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small"
                android:visibility="@{secondScreen ? V.GONE : V.VISIBLE}">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_name"
                    android:inputType="text|textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium"
                android:visibility="@{secondScreen ? V.GONE : V.VISIBLE}">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_identity"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium"
                android:visibility="@{secondScreen ? V.GONE : V.VISIBLE}">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_cel"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/disability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_dis"
                android:visibility="@{secondScreen ? V.GONE : V.VISIBLE}" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium"
                android:visibility="@{secondScreen ? V.VISIBLE : V.GONE}">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium"
                android:visibility="@{secondScreen ? V.VISIBLE : V.GONE}">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_pass"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium"
                android:visibility="@{secondScreen ? V.VISIBLE : V.GONE}">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_pass2"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <Button
                    android:id="@+id/btnBack"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_weight="1"
                    android:enabled="@{!loader.loading.get()}"
                    android:text="@string/reg_back"
                    android:visibility="@{secondScreen ? V.VISIBLE : V.INVISIBLE}" />

                <Button
                    android:id="@+id/btnNext"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_weight="1"
                    android:text="@string/reg_next"
                    android:textColor="@color/textPrimaryInvert"
                    android:visibility="@{secondScreen ? V.GONE : V.VISIBLE}" />

                <Button
                    android:id="@+id/btnReg"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_weight="1"
                    android:enabled="@{!loader.loading.get()}"
                    android:text="@string/reg_ok"
                    android:textColor="@color/textPrimaryInvert"
                    android:visibility="@{secondScreen ? V.VISIBLE : V.GONE}" />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:gravity="center"
            android:text="@string/loading"
            android:visibility="@{loader.loading.get() ? V.VISIBLE : V.INVISIBLE}" />
    </LinearLayout>


</layout>