<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data class="RegisterBinding">
        <import type="android.view.View" alias="V"/>
        <variable
            name="handler"
            type="ezlife.movil.oneparkingapp.activities.RegisterActivity"/>
        <variable
            name="secondScreen"
            type="java.lang.Boolean"/>
    </data>

    <LinearLayout
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@drawable/background"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/xmedium"
            android:layout_marginBottom="@dimen/medium"
            >

            <ImageView
                android:layout_width="@dimen/login_logo"
                android:layout_height="@dimen/login_logo"
                app:srcCompat="@drawable/ic_logo"
                android:layout_marginRight="@dimen/small"

                />
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Display2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oneparking"
                android:textColor="@color/textPrimaryInvert"
                app:roboto='@{"rt"}'
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium"
                android:text="@string/reg_info"
                android:gravity="center" />

            <android.support.design.widget.TextInputLayout
                android:visibility="@{secondScreen ? V.GONE : V.VISIBLE}"
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapWords"
                    android:hint="@string/reg_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="@{secondScreen ? V.GONE : V.VISIBLE}"
                android:id="@+id/identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/reg_identity" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:visibility="@{secondScreen ? V.GONE : V.VISIBLE}"
                android:id="@+id/cel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/reg_cel" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:visibility="@{secondScreen ? V.GONE : V.VISIBLE}"
                android:id="@+id/dis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_dis"
                />

            <android.support.design.widget.TextInputLayout
                android:visibility="@{secondScreen ? V.VISIBLE : V.GONE}"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/reg_email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="@{secondScreen ? V.VISIBLE : V.GONE}"
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/reg_pass" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:visibility="@{secondScreen ? V.VISIBLE : V.GONE}"
                android:id="@+id/pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/reg_pass2" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns='@{secondScreen ? "0,2" : "0,1"}'
            >
            <TableRow>
                <Button
                    android:visibility="@{secondScreen ? V.VISIBLE : V.INVISIBLE}"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/reg_back"
                    android:onClick="@{()->handler.back()}"
                    />
                <Button
                    android:visibility="@{secondScreen ? V.GONE : V.VISIBLE}"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:text="@string/reg_next"
                    android:textColor="@color/textPrimaryInvert"
                    android:onClick="@{()->handler.next()}" />
                <Button
                    android:visibility="@{secondScreen ? V.VISIBLE : V.GONE}"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:text="@string/reg_ok"
                    android:textColor="@color/textPrimaryInvert"
                    android:onClick="@{()->handler.register()}" />
            </TableRow>
        </TableLayout>



    </LinearLayout>
</layout>

